--- a/ben/test/pom.xml
+++ b/ben/test/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>hutool-all</artifactId>
             <version>4.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
